--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -9,6 +9,7 @@
   </head>
   <body>
     <%- include('partials/alerts') %>
+    <li><a href="/">Home</a></li>
     <% if (!currentUser) {%>
       <li><a href="/auth/signup">Signup</a></li>
       <li><a href="/auth/login">Login</a></li>
@@ -16,6 +17,7 @@
       <li><a href="/auth/logout">Logout</a></li>
       <li><a href="/profile">Profile</a></li>
   <% } %>
+  <hr>
     <%- body %> 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
