--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -22,22 +22,14 @@
                     <input type="password" id="typePasswordX" name="password" class="form-control form-control-lg" />
                     <label class="form-label" for="typePasswordX">Password</label>
                   </div>
-                  
-                  <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">Forgot password?</a></p>
-                  
+                                    
                   <button class="btn btn-outline-light btn-lg px-5" type="submit">Login</button>
                   
-                </form>
-                <div class="d-flex justify-content-center text-center mt-4 pt-1">
-                  <a href="#!" class="text-white"><i class="fab fa-facebook-f fa-lg"></i></a>
-                  <a href="#!" class="text-white"><i class="fab fa-twitter fa-lg mx-4 px-2"></i></a>
-                  <a href="#!" class="text-white"><i class="fab fa-google fa-lg"></i></a>
-                </div>
-  
+                </form>  
               </div>
   
               <div>
-                <p class="mb-0">Don't have an account? <a href="#!" class="text-white-50 fw-bold">Sign Up</a>
+                <p class="mb-0">Don't have an account? <a href="/auth/signup" class="text-white-50 fw-bold">Sign Up</a>
                 </p>
               </div>
   
