--- a/views/park.ejs
+++ b/views/park.ejs
@@ -1,21 +1,84 @@
-<p>Like this park? Add it to your favorites list <button>Add to Favorites</button></p>
-<a href="<%= park.url %>" target="_blank"><%= park.fullName %></a>
-<p>Type: <%= park.designation %></p>
-<p>
-    <%= park.description %>
-</p>
-<h1>Things to do:</h1>
-<ul>
-    <% park.activities.forEach(activity =>{ %>
-        <li><%= activity.name %></li>
-    <% }) %>
-</ul>
+<div class="container mt-5">
+    <div class="row">
+        <iframe width='100%' height='400px' src="<%= mapUrl %>" title="Mapbox Basic" style="border: none;"></iframe>
+    </div>
+    <div class="row align-items-center mt-4">
+        <div class="col-md-10">
+            <h1 id="park-name" class="mt-4 d-inline"><a href="<%= park.url %>" target="_blank"><%= park.fullName %></a></h1>
+        </div>
+        <div class="col-md-2 text-right">
+            <form action="/profile" method="post">
+                <button class="btn btn-primary favorite-btn" name="code" value="<%= park.parkCode %>">Add to Favorites</button>
+            </form>
+        </div>
+    </div>
+    <p class="mt-2"><%= park.description %></p>
 
-<p>Found in these states: <%= park.states %></p>
+    <div class="row">
+        <div class="col-md-6 mt-5">
+            <h2 class="mt-4">Park Activities</h2>
+            <ul>
+                <% park.activities.forEach(activity =>{ %>
+                <li><%= activity.name %></li>
+                <% }) %>
+            </ul>
 
-<h1>Images:</h1>
-<% park.images.forEach(photo => { %>
-    <img src="<%= photo.url %>" alt="<%= photo.altText %>" style="height: 200px;">
-    <p>Credit: <%= photo.credit %></p>
-    <p><%= photo.caption %></p>
-<% }) %>
+        </div>
+
+        <div class="col-md-6 mt-5">
+            <div class="row">
+                <% park.images.forEach(photo => { %>
+                <div class="col-md-6 mt-3">
+                    <img src="<%= photo.url %>" class="img-fluid" alt="<%= photo.altText %>">
+                    <p class="text-center picture-credit">Credit: <%= photo.credit %></p>
+                    <p class="text-center picture-caption"><%= photo.caption %></p>
+                </div>
+                <% }) %>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <h2 class="mt-2">Operating Hours</h2>
+            <p><%= park.operatingHours[0].description %></p>
+            <table class="table">
+                <thead>
+                  <tr>
+                    <th>Day</th>
+                    <th>Hours</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>Monday</td>
+                    <td><%= park.operatingHours[0].standardHours.monday %></td>
+                  </tr>
+                  <tr>
+                    <td>Tuesday</td>
+                    <td><%= park.operatingHours[0].standardHours.tuesday %></td>
+                  </tr>
+                  <tr>
+                    <td>Wednesday</td>
+                    <td><%= park.operatingHours[0].standardHours.wednesday %></td>
+                  </tr>
+                  <tr>
+                    <td>Thursday</td>
+                    <td><%= park.operatingHours[0].standardHours.thursday %></td>
+                  </tr>
+                  <tr>
+                    <td>Friday</td>
+                    <td><%= park.operatingHours[0].standardHours.friday %></td>
+                  </tr>
+                  <tr>
+                    <td>Saturday</td>
+                    <td><%= park.operatingHours[0].standardHours.saturday %></td>
+                  </tr>
+                  <tr>
+                    <td>Sunday</td>
+                    <td><%= park.operatingHours[0].standardHours.sunday %></td>
+                  </tr>
+                </tbody>
+              </table>
+    </div>
+
+</div>
