chore: update README

--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -1,3 +1,6 @@
+<head>
+  <title>Signup</title>
+</head>
 <!-- Section: Design Block -->
 <section class="background-radial-gradient overflow-hidden">
     <style>
