--- a/views/favorites.ejs
+++ b/views/favorites.ejs
@@ -1,3 +1,6 @@
+<head>
+    <title>Favorites</title>
+</head>
 <div class="container">
     <!-- Breadcrumb -->
     <nav aria-label="breadcrumb" class="main-breadcrumb">
