--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,6 @@
+<head>
+    <title>PARKing Lot</title>
+</head>
 <div class="row text-center">
     <h1>Welcome to the PARKing Lot</h1>
     <a href="/search"><button class="btn btn-primary favorite-btn">Let's Find A Park!</button></a>
