--- a/views/park.ejs
+++ b/views/park.ejs
@@ -1,3 +1,6 @@
+<head>
+  <title><%= park.name %></title>
+</head>
 <div class="container mt-5">
     <div class="row">
         <iframe width='100%' height='400px' src="<%= mapUrl %>" title="Mapbox Basic" style="border: none;"></iframe>
