--- a/views/search.ejs
+++ b/views/search.ejs
@@ -1,3 +1,6 @@
+<head>
+    <title>Search for a Park</title>
+</head>
 <div class="container mt-4">
     <div class="row">
       <div class="col-md-6">
