--- a/views/test.ejs
+++ b/views/test.ejs
@@ -1,3 +1,6 @@
+<head>
+  <title>test</title>
+</head>
 <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">
