feat: add edit button to user

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -23,6 +23,7 @@
                       <h4><%= name %></h4>
                       <h4><%= email %></h4>
                       <a href="/profile/favorites"><button class="btn btn-primary">View Favorites</button></a>
+                      <a href="/profile/edit/:name"><button class="btn btn-primary">Edit Profile</button></a>
                     </div>
                   </div>
                 </div>
