fix: fix glitch where search button took up whole page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,5 +3,7 @@
 </head>
 <div class="row text-center">
     <h1>Welcome to the PARKing Lot</h1>
-    <a href="/search"><button class="btn btn-primary favorite-btn">Let's Find A Park!</button></a>
+    <div>
+        <a href="/search"><button class="btn btn-primary favorite-btn">Let's Find A Park!</button></a>
+    </div>
 </div>
