feat: add short description to home page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,31 @@
 <head>
     <title>PARKing Lot</title>
 </head>
-<div class="row text-center">
-    <h1>Welcome to the PARKing Lot</h1>
-    <div>
-        <a href="/search"><button class="btn btn-primary favorite-btn">Let's Find A Park!</button></a>
+<div class="container">
+    <div class="row text-center">
+        <h1>Welcome to the PARKing Lot</h1>
+        <div class="col-md-8 offset-md-2 mt-4">
+            <h6>Discover the natural beauty of national parks. From stunning landscapes to unique wildlife, explore our
+                extensive collection of properties owned by the national parks.</h6>
+        </div>
+        <div class="mt-4">
+            <a href="/search"><button class="btn btn-primary favorite-btn">Let's Find A Park!</button></a>
+        </div>
     </div>
 </div>
+
+<!-- <div class="container">
+    <div class="row text-center">
+        <h1>Welcome to the PARKing Lot</h1>
+    </div>
+    <div class="row justify-content-center">
+        <div class="col-4">
+            <a href="/search" class="btn btn-primary btn-lg btn-block mb-3">Let's Find A Park!</a>
+            <div class="description-box">
+                <p class="description-text">
+                    Discover the natural beauty of national parks. From stunning landscapes to unique wildlife, explore our extensive collection of properties owned by the national parks.
+                </p>
+            </div>
+        </div>
+    </div>
+</div> -->
